# ModuCalc

./: .gitignore  CMakeLists.txt  README.md  historymanager.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  scriptengine.cpp  scriptengine.h
.qtcreator/: CMakeLists.txt.user.380ff0c  CMakeLists.txt.user.5c7099c
src/core/: TokenType.h  core_placeholder.cpp  evaluator.cpp  evaluator.h  expression_utils.cpp  expression_utils.h  lexer.cpp  lexer.h  parser.cpp  parser.h  solver.cpp  solver.h  token.cpp  token.h
src/history/: historymanager.cpp  historymanager.h  scriptengine.cpp  scriptengine.h
src/modules/: statistics.cpp  statistics.h  trigonometry.cpp  trigonometry.h  unitconversion.cpp  unitconversion.h
src/ocr/: OCRReader.cpp  OCRReader.h
src/types/: complex.cpp  complex.h  matrix.cpp  matrix.h  number.cpp  number.h  vector.cpp  vector.h
